--- a/Dashboard/wwwroot/css/site.css
+++ b/Dashboard/wwwroot/css/site.css
@@ -53,19 +53,26 @@ button.accept-policy {
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
+ /*html {
   position: relative;
   min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
+  Margin bottom by footer height 
   margin-bottom: 60px;
-}
+}*/
 .footer {
-  position: absolute;
+    /*position: absolute;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 60px;*/
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: inherit;
+    color: white;
+    text-align: center;
 }
