applied built in exception filter

--- a/Textbook Exercises/ProASP.NET/Filters/Views/Shared/RangeError.cshtml
+++ b/Textbook Exercises/ProASP.NET/Filters/Views/Shared/RangeError.cshtml
@@ -1,15 +1,14 @@
 ﻿
-@model int
+@model HandleErrorInfo
 
 @{ 
-    var count = 0;
-    var number = Model / count;
+    ViewBag.Title = "Sorry, there was problem.";
 }
 
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" charset="utf-8" />
     <title>Range Error</title>
     <style>
         body {
@@ -33,7 +32,7 @@
 <body>
     <div class="centered-div">
         <h2>Sorry Buddy,</h2>
-        <span>One of the arguments was out of the expected range</span>
+        <span>The Value @(((ArgumentOutOfRangeException)Model.Exception).ActualValue) is out of the expected range.</span>
         <div>
             @Html.ActionLink("Change Value and try again", "Index");
         </div>
