--- a/Textbook Exercises/ProASP.NET/WorkingWithRazor/Views/Home/Index.cshtml
+++ b/Textbook Exercises/ProASP.NET/WorkingWithRazor/Views/Home/Index.cshtml
@@ -8,6 +8,21 @@
 
 This is a list of Fruits:
 
-@foreach (string name in Model) {
-    <span>@name</span>
+
+@section Header {
+    <div class="view">
+        @foreach (string str in new[] { "Home", "List", "Edit" }) {
+            @Html.ActionLink(str, str, null, new { style = "margin: 5px; border: 4px;" })
+        }
+    </div>
 }
+
+@section Body{
+    <div class="view">
+        this is a list of fruit names:
+        @foreach (string name in Model) {
+            <span><b>@name</b></span>
+        }
+    </div>
+}
+
