--- a/Textbook Exercises/ProASP.NET/WorkingWithRazor/Views/Common/List.cshtml
+++ b/Textbook Exercises/ProASP.NET/WorkingWithRazor/Views/Common/List.cshtml
@@ -1,7 +1,13 @@
 ﻿
 @{
     ViewBag.Title = "List";
+    Layout = null;
+
+    string[] fruitItems = { "Strawberry", "Orange", "Milkyway", "Passion Fruit"};
 }
 
 <h2>This is the /Views/Common/List.cshtml View</h2>
 
+@Html.Partial("_OurStronglyTyped", fruitItems)
+
+@Html.Action("OurTime")
