creating the ajax form

--- a/Textbook Exercises/ProASP.NET/Ch21_HelperMethods/Views/People/GetPeople_Old1.cshtml
+++ b/Textbook Exercises/ProASP.NET/Ch21_HelperMethods/Views/People/GetPeople_Old1.cshtml
@@ -17,7 +17,13 @@
         </tr>
     </thead>
     <tbody>
-        @Html.Action("GetPeopleData", new {selectedRole = Model})
+        @foreach (Person item in Model) {
+            <tr>
+                <td>@item.FirstName</td>
+                <td>@item.LastName</td>
+                <td>@item.Role</td>
+            </tr>
+        }
     </tbody>
 
 </table>
