--- a/Textbook Exercises/ProASP.NET/Ch21_HelperMethods/Views/Shared/_Layout.cshtml
+++ b/Textbook Exercises/ProASP.NET/Ch21_HelperMethods/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
         div.load {color:red;margin:10px 0; font-weight:bold}
         div.ajaxLink{margin-top:10px;margin-right:5px;float:left;}
     </style>
+    <script src="~/Scripts/jquery-3.7.1.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
 </head>
 <body>
 
