--- a/Textbook Exercises/ProASP.NET/Ch21_HelperMethods/Views/Shared/_Layout.cshtml
+++ b/Textbook Exercises/ProASP.NET/Ch21_HelperMethods/Views/Shared/_Layout.cshtml
@@ -5,28 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <style type="text/css">
-        label{display:inline-block;width:100px;}
-        div.dataElem{margin:5px;}
+        label {
+            display: inline-block;
+            width: 100px;
+        }
 
-        h2 > label {width:inherit;}
-        .editor-label, .editor-field{float:left;margin-top:10px;}
-        .editor-field input{height:20px;}
-        .editor-label{clear:left;}
-        .editor-field{margin-left:10px;}
-        input[type=submit]{float:left;clear:both;margin-top:10px;}
-        .column{float:left;margin:10px;}
+        div.dataElem {
+            margin: 5px;
+        }
+
+        h2 > label {
+            width: inherit;
+        }
+
+        .editor-label, .editor-field {
+            float: left;
+            margin-top: 10px;
+        }
+
+            .editor-field input {
+                height: 20px;
+            }
+
+        .editor-label {
+            clear: left;
+        }
+
+        .editor-field {
+            margin-left: 10px;
+        }
+
+        input[type=submit] {
+            float: left;
+            clear: both;
+            margin-top: 10px;
+        }
+
+        .column {
+            float: left;
+            margin: 10px;
+        }
 
         table, td, th {
-            border:thin solid black; 
-            border-collapse: collapse; 
-            padding: 5px; 
-            background-color:lemonchiffon;
-            text-align:left;
-            margin:10px 0;
+            border: thin solid black;
+            border-collapse: collapse;
+            padding: 5px;
+            background-color: lemonchiffon;
+            text-align: left;
+            margin: 10px 0;
         }
-        div.load {color:red;margin:10px 0; font-weight:bold}
-        div.ajaxLink{margin-top:10px;margin-right:5px;float:left;}
+
+        div.load {
+            color: red;
+            margin: 10px 0;
+            font-weight: bold
+        }
+
+        div.ajaxLink {
+            margin-top: 10px;
+            margin-right: 5px;
+            float: left;
+        }
     </style>
+
     <script src="~/Scripts/jquery-3.7.1.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
 </head>
@@ -39,6 +80,5 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
 </body>
 </html>
