--- a/Textbook Exercises/ProASP.NET/Ch24_MvcModels/Views/Shared/_Layout.cshtml
+++ b/Textbook Exercises/ProASP.NET/Ch24_MvcModels/Views/Shared/_Layout.cshtml
@@ -13,7 +13,12 @@
         }
         form label {float: left;}
         input.text-box {float:left; margin:5px;}
-        button[type=submit] {margin-top:5px;float:left;clear:left;}
+        button[type=submit] {
+            margin-top:5px;
+            float:left;
+            clear:left;
+            background-color:deepskyblue;
+            color:azure}
         form div {clear:both;}
     </style>
 </head>
