--- a/Textbook Exercises/ProASP.NET/Ch24_MvcModels/Views/Home/NameCollection.cshtml
+++ b/Textbook Exercises/ProASP.NET/Ch24_MvcModels/Views/Home/NameCollection.cshtml
@@ -1,12 +1,12 @@
 ﻿@model string[]
 @{
-    ViewBag.Title = "Names";
+    ViewBag.Title = "NameCollection";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Names</h2>
+<h2>Name Collection</h2>
 
-@if (Model.Length == 0) {
+@if (Model.Count() == 0) {
     using (Html.BeginForm()) {
         for (int i = 0; i < 3; i++) {
             <div><label>@(i + 1): </label>@Html.TextBox("names")</div>
@@ -17,6 +17,6 @@
     foreach (string item in Model) {
         <p>@item</p>
     }
-    @Html.ActionLink("Back", "Names")
+    @Html.ActionLink("Back", "NameCollection")
 
 }
