--- a/Textbook Exercises/ProASP.NET/Ch24_MvcModels/Views/Home/NameCollection.cshtml
+++ b/Textbook Exercises/ProASP.NET/Ch24_MvcModels/Views/Home/NameCollection.cshtml
@@ -1,4 +1,4 @@
-﻿@model string[]
+﻿@model IList<string>
 @{
     ViewBag.Title = "NameCollection";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,7 +6,7 @@
 
 <h2>Name Collection</h2>
 
-@if (Model.Count() == 0) {
+@if (Model.Count == 0) {
     using (Html.BeginForm()) {
         for (int i = 0; i < 3; i++) {
             <div><label>@(i + 1): </label>@Html.TextBox("names")</div>
