--- a/Textbook Exercises/ProASP.NET/Ch25_ModelValidation/Views/Home/MakeBooking.cshtml
+++ b/Textbook Exercises/ProASP.NET/Ch25_ModelValidation/Views/Home/MakeBooking.cshtml
@@ -7,8 +7,15 @@
 <h2>MakeBooking</h2>
 
 @using (Html.BeginForm()) {
+    @Html.ValidationSummary(true)
+
+    <p>@Html.ValidationMessageFor(m => m.ClientName)</p>
     <p>Your Name: @Html.EditorFor(m => m.ClientName)</p>
+
+    <p>@Html.ValidationMessageFor(m => m.Date)</p>
     <p>Appintment Date: @Html.EditorFor(m => m.Date)</p>
+
+    <p>@Html.ValidationMessageFor(m => m.TermsAccepted)</p>
     <p>@Html.EditorFor(m => m.TermsAccepted) I accept the terms & conditions</p>
     <input type="submit" value="Make Booking" />
 
