setting the ajax

--- a/Textbook Exercises/ProASP.NET/Ch26_ClientFeatures/Views/Home/MakeBooking.cshtml
+++ b/Textbook Exercises/ProASP.NET/Ch26_ClientFeatures/Views/Home/MakeBooking.cshtml
@@ -2,7 +2,56 @@
 
 @{
     ViewBag.Title = "MakeBooking";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    AjaxOptions ajaxOpts = new AjaxOptions {
+        OnSuccess = "processResponse"
+    };
 }
 
 <h2>MakeBooking</h2>
 
+@section Body {
+    <div id="formDiv" class="visible card">
+        @using (Ajax.BeginForm(ajaxOpts)) {
+            @Html.ValidationSummary(true)
+
+            <div class="mb-3">
+                <label for="ClientName">Your Name: </label>
+                <p>@Html.ValidationMessageFor(m => m.ClientName)</p>
+                @Html.TextBoxFor(m => m.ClientName, new { @class="form-control" })
+            </div>
+            <div class="form-check">
+                <label>@Html.CheckBoxFor(m => m.TermsAccepted) I accept T&C</label>
+            </div>
+            <input type="submit" value="Make Booking" class="btn btn-primary" />
+        }
+    </div>
+
+    <div id="successDiv" class="hidden card">
+        <h4 class="lead">Your appointment is confirmed</h4>
+        <p>Your name is: <b id="successClientName"></b></p>
+        <button id="backButton" class="btn btn-secondary">Back to Main Page</button>
+    </div>
+}
+
+
+@section Scripts {
+    <script type="text/javascript">
+        alert("In the javascript");
+        function switchViews() {
+            $(".hidden, .visible").toggleClass("hidden visible");
+        }
+
+        function processResponse(appointment) {
+            alert("before the processing");
+            $("#successClientName").text(appointment.ClientName);
+            switchViews();
+        }
+
+        $(document).ready(function () {
+            $("#backButton").click(function (e) {
+                switchViews();
+            })
+        })
+    </script>    
+}
