--- a/Textbook Exercises/ProASP.NET/Ch26_ClientFeatures/Content/Site.css
+++ b/Textbook Exercises/ProASP.NET/Ch26_ClientFeatures/Content/Site.css
@@ -16,3 +16,29 @@ textarea {
     max-width: 280px;
 }
 
+.field-validation-error {
+    color: #f00;
+}
+
+.validation-summary-errors {
+    color: #f00;
+    font-weight: bold;
+}
+
+.input-validation-error {
+    border: 2px solid #f00;
+    background-color: #fee;
+}
+
+input[type="checkbox"].input-validation-error {
+    outline: 2px solid #f00;
+}
+
+div.hidden {
+    display: none;
+}
+
+div.visible {
+    display: block;
+}
+
