--- a/Textbook Exercises/ProASP.NET/Ch26_ClientFeatures/Views/Shared/_Layout.cshtml
+++ b/Textbook Exercises/ProASP.NET/Ch26_ClientFeatures/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
-
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     @RenderSection("Scripts", false)
 </body>
 </html>
