--- a/Textbook Exercises/ProASP.NET/Ch27_WebServices/Views/Home/Index.cshtml
+++ b/Textbook Exercises/ProASP.NET/Ch27_WebServices/Views/Home/Index.cshtml
@@ -1,8 +1,19 @@
-﻿@model Ch27_WebServices.Models.Reservation
+﻿@using Ch27_WebServices.Models
+@model IEnumerable<Reservation>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Reservations";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+@section Body {
+    <div id="summary" class="section card text-bg-primary">
+        @Html.Partial("_Summary", Model)
+    </div>
 
+    <div id="editor" class="section card text-bg-primary">
+        @Html.Partial("_Editor", new Reservation())
+    </div>
+}
+
+@section Scripts{ }
