--- a/Textbook Exercises/ProASP.NET/Ch27_WebServices/Views/Home/Index.cshtml
+++ b/Textbook Exercises/ProASP.NET/Ch27_WebServices/Views/Home/Index.cshtml
@@ -17,4 +17,36 @@
 
 }
 
-@section Scripts{ }
+@section Scripts{
+    <script>
+        var model = {
+            reservations: ko.observableArray()
+        };
+
+        function sendAjaxRequest(httpMethod, callback, url) {
+            $.ajax("/api/web" + (url ? "/" + url : ""), {
+                type: httpMethod, success: callback
+            });
+
+            function getAllItems() {
+                sendAjaxRequest("GET", function (data) {
+                    model.reservations.removeAll();
+                    for (var i = 0; i < data.length; i++) {
+                        model.reservations.push(data[i]);
+                    }
+                })
+            }
+
+            function removeItem(item) {
+                sendAjaxRequest("DELETE", function () {
+                    getAllItems();
+                }, item.reservationId);
+            }
+
+            $(document).ready(function () {
+                getAllItems();
+                ko.applyBindings(model);
+            })
+        }
+    </script>
+}
