--- a/Textbook Exercises/ProASP.NET/Ch27_WebServices/Views/Shared/_Layout.cshtml
+++ b/Textbook Exercises/ProASP.NET/Ch27_WebServices/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+
 </head>
 <body>
     <div class="container-fluid">
@@ -14,5 +15,7 @@
     </div>
 
     @RenderSection("Scripts")
+    <script src="~/Scripts/knockout-3.5.1.js"></script>
+
 </body>
 </html>
