added the product model from advworks

--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_NavHeader.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_NavHeader.cshtml
@@ -17,7 +17,7 @@
                     <ul class="dropdown-menu dropdown-menu-center">
                         <li class="nav-item disabled text-center"><h4>All Services</h4></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li>@Html.ActionLink("Link 1", "UnderConstruction", "InProgress", new { area = "" }, new { @class = "nav-link dropdown-item" })</li>
+                        <li>@Html.ActionLink("In Progress", "List", "ProductVendor", new { area = "" }, new { @class = "nav-link dropdown-item" })</li>
                         <li>@Html.ActionLink("Link 1", "UnderConstruction", "InProgress", new { area = "" }, new { @class = "nav-link dropdown-item" })</li>
                         <li>@Html.ActionLink("Link 1", "UnderConstruction", "InProgress", new { area = "" }, new { @class = "nav-link dropdown-item" })</li>
                         <li>@Html.ActionLink("Link 1", "UnderConstruction", "InProgress", new { area = "" }, new { @class = "nav-link dropdown-item disabled" })</li>
