navgiation menu completed

--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_Layout.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_Layout.cshtml
@@ -14,8 +14,8 @@
         <h3 class="card-header">Merchandise</h3>
         <div class="card-body">
             <div class="row">
-                <div id="categories" class="col-sm-3">
-                    Put Something useful here later
+                <div id="categories" class="col-sm-3 mt-3">
+                    @Html.Action("Menu", "Nav")
                 </div>
                 <div class="col-sm-8">
                     @RenderBody()
