--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_Layout.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_Layout.cshtml
@@ -11,11 +11,11 @@
 <body>
     @Html.Partial("_NavHeader", applicationName)
 
-    <div class="card">
-        <h3 class="card-header">Merchandise</h3>
+    <div class="card container mt-2">
+    <h3 class="card-header text-center">Merchandise</h3>
         <div class="card-body">
             <div class="row">
-                <div id="categories" class="col-sm-2 mt-3">
+                <div id="categories" class="col-sm-2">
                     @Html.Action("Menu", "Nav")
                 </div>
                 <div class="col-sm-10">
