--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_MerchSummary.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Shared/_MerchSummary.cshtml
@@ -2,7 +2,7 @@
 @model SportsStore.Domain.Merchandise
 
 
-<div class="card m-3">
+<div class="card mb-3">
     <div class="p-3 m-2">
         @*<span class="lead float-end p-3 bg-secondary text-white rounded">@Model.Price.ToString("c")</span>*@
         <span class="float-end btn btn-secondary btn-lg w-25">@Model.Price.ToString("c")</span>
