--- a/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Merch/_MerchSummary.cshtml
+++ b/Textbook Exercises/PRO_ASP.NET_MVC/SportsStore.Web/Views/Merch/_MerchSummary.cshtml
@@ -5,16 +5,18 @@
 <div class="card mb-3">
     <div class="p-3 m-2">
         @*<div class="float-end btn btn-secondary btn-lg">@Model.Price.ToString("c") ++</div>*@
-                <input type="button" class="btn btn-secondary btn-lg" value="@Model.Price.ToString("c")" disabled />
+        <h2>@Model.Name</h2>
+        <input type="button" class="btn btn-secondary btn-lg float-end" value="@Model.Price.ToString("c")" disabled />
 
-        @using (Html.BeginForm("AddToCart", "Cart")) {
-            <div class="btn-group float-end w-25" role="group" aria-label="Basic example">
+        @using (Html.BeginForm("AddToCart", "Cart"))
+        {
+            <div class="float-end">
                 @Html.HiddenFor(x => x.Id)
                 @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
-                <input type="submit" class="btn btn-outline-secondary btn-lg" value="Add To Cart" />
+                <input type="submit" class="btn btn-outline-secondary btn-lg" value="Add To Cart - @Model.Id" />
             </div>
         }
-        <h2>@Model.Name</h2>
         <span class="pt-3 ">@Model.Description</span>
     </div>
 </div>
+
