wired the database

--- a/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Product/ProductListing.cshtml
+++ b/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Product/ProductListing.cshtml
@@ -9,7 +9,7 @@
 
 @foreach (var product in Model) {
     <div>
-        <h3>@product.ProductName</h3>
+        <h3>@product.Name</h3>
         @product.Description
         <h4>@product.Price.ToString("c")</h4>
     </div>
