--- a/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Product/ProductListing.cshtml
+++ b/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Product/ProductListing.cshtml
@@ -1,16 +1,16 @@
-﻿@using SportsStore.Domain
-@model IEnumerable<Product>
+﻿@model SportsStore.Web.Models.ProductsListViewModel
 
 @{
     ViewBag.Title = "Product Listings";
 }
 
-<h2>Product Listing</h2>
 
-@foreach (var product in Model) {
-    <div>
-        <h3>@product.Name</h3>
-        @product.Description
-        <h4>@product.Price.ToString("c")</h4>
-    </div>
-}
+@foreach (var product in Model.Products) {
+    
+    @Html.Partial("_ProductSummary", product)
+    <hr />
+ }
+
+<div class="btn btn-group float-end">
+    @Html.PageLinks(Model.PagingInfo, p => Url.Action("ProductListing", new { page = p }))
+</div>
