--- a/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Shared/_Layout.cshtml
+++ b/Textbook Exercises/SportsStore.Web/SportsStore.Web/Views/Shared/_Layout.cshtml
@@ -8,8 +8,23 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="container body-content">
-        @RenderBody()
+    <nav class="navbar bg-dark bg-body-tertiary" data-bs-theme="dark">
+        <div class="container">
+            <span class="navbar-brand mb-0 h1">Sports Store</span>
+        </div>
+    </nav>
+    <div class="card container mt-2">
+        <div class="card-body">
+            <div class="row">
+                <div id="categories" class="col-sm-3">
+                    something goes here
+                </div>
+                <div class="col-sm-1"></div>
+                <div class="col-sm-8">
+                    @RenderBody()
+                </div>
+            </div>
+        </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
